--- a/public/index.html
+++ b/public/index.html
@@ -82,9 +82,18 @@
             <select id="branch" class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none" required>
               <option value="CSE">Computer Science</option>
               <option value="IT">Information Technology</option>
+              <option value="Artificial Intelligence">Information Technology</option>
+              
               <option value="ECE">Electronics & Communication</option>
               <option value="EEE">Electrical Engineering</option>
               <option value="ME">Mechanical Engineering</option>
+              <option value="CE">Civil Engineering</option>
+              <option value="CE">Civil Engineering</option>
+              <option value="CE">Civil Engineering</option>
+              <option value="CE">Civil Engineering</option>
+              <option value="CE">Civil Engineering</option>
+              <option value="CE">Civil Engineering</option>
+              <option value="CE">Civil Engineering</option>
               <option value="CE">Civil Engineering</option>
             </select>
           </div>
