--- a/public/index.html
+++ b/public/index.html
@@ -82,19 +82,20 @@
             <select id="branch" class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none" required>
               <option value="CSE">Computer Science</option>
               <option value="IT">Information Technology</option>
-              <option value="Artificial Intelligence">Information Technology</option>
-              
+              <option value="Artificial Intelligence">Artificial Intelligence and Data Science</option>
               <option value="ECE">Electronics & Communication</option>
-              <option value="EEE">Electrical Engineering</option>
-              <option value="ME">Mechanical Engineering</option>
-              <option value="CE">Civil Engineering</option>
-              <option value="CE">Civil Engineering</option>
-              <option value="CE">Civil Engineering</option>
-              <option value="CE">Civil Engineering</option>
-              <option value="CE">Civil Engineering</option>
-              <option value="CE">Civil Engineering</option>
-              <option value="CE">Civil Engineering</option>
-              <option value="CE">Civil Engineering</option>
+              <option value="ECC">Electronics & Computer</option>
+              <option value="Electrical and Electronics">Electrical and Electronics Engineering</option>
+              <option value="EE">Electrical Engineering</option>
+              <option value="Mechinal">Mechanical Engineering</option>
+              <option value="Mining">Mining Engineering</option>
+              <option value="Civil">Civil Engineering</option>
+              <option value="Chemical">Chemical Engineering</option>
+              <option value="Production & Industrial Engineering">Production & Industrial Engineering</option>
+              <option value="Petroleum">Petroleum Engineering</option>
+              <option value="Building and Construction Technology">Building and Construction Technology</option>
+              <option value="B.Planning">B.Planning</option>
+              <option value="Architecture">Architecture</option>
             </select>
           </div>
         </div>
