--- a/public/index.html
+++ b/public/index.html
@@ -78,16 +78,16 @@
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-2">Branch</label>
             <select id="branch" class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none" required>
-              <option value="CSE">Computer Science</option>
-              <option value="IT">Information Technology</option>
+              <option value="Computer Science & Engineering">Computer Science</option>
+              <option value="Information Technology">Information Technology</option>
               <option value="Artificial Intelligence">Artificial Intelligence and Data Science</option>
-              <option value="ECE">Electronics & Communication</option>
-              <option value="ECC">Electronics & Computer</option>
+              <option value="Electronics & Communication">Electronics & Communication</option>
+              <option value="Electronics & Computer">Electronics & Computer</option>
               <option value="Electrical and Electronics">Electrical and Electronics Engineering</option>
-              <option value="EE">Electrical Engineering</option>
+              <option value="Electrical Engineering">Electrical Engineering</option>
               <option value="Mechinal">Mechanical Engineering</option>
               <option value="Mining">Mining Engineering</option>
-              <option value="Civil">Civil Engineering</option>
+              <option value="( Civil Engineering )">Civil Engineering</option>
               <option value="Chemical">Chemical Engineering</option>
               <option value="Production & Industrial Engineering">Production & Industrial Engineering</option>
               <option value="Petroleum">Petroleum Engineering</option>
