--- a/public/index.html
+++ b/public/index.html
@@ -101,11 +101,11 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-2">Start Roll Number</label>
-            <input type="text" id="start-roll" class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none" required placeholder="e.g., 2020UCS2001">
+            <input type="text" id="start-roll" class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none" required placeholder="e.g., 20UCSE2001">
           </div>
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-2">End Roll Number</label>
-            <input type="text" id="end-roll" class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none" required placeholder="e.g., 2020UCS2010">
+            <input type="text" id="end-roll" class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none" required placeholder="e.g., 20UCSE2010">
           </div>
         </div>
         
